--- a/plugin.xml
+++ b/plugin.xml
@@ -37,62 +37,58 @@
 			</feature>
 		</config-file>
 
-		<config-file parent="/manifest/application" target="AndroidManifest.xml">
-			<activity android:label="@string/app_name" android:name="com.openback.android.sdk.utils.helper.DisplayInteractiveMessage" android:screenOrientation="portrait" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:windowSoftInputMode="stateAlwaysHidden" />
+		<config-file parent="/*" target="AndroidManifest.xml">
+			<uses-permission android:name="android.permission.INTERNET" />
+		    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+		    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+		    <uses-permission android:name="android.permission.WAKE_LOCK" />
+		    <uses-permission android:name="android.permission.VIBRATE" />
+		    <uses-permission android:name="android.permission.BATTERY_STATS" />
+		    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-			<service android:name="com.openback.android.sdk.utils.helper.OpenbackService" />
-			<service android:name="com.openback.android.sdk.utils.helper.OpenBackAssetService" />
-			<service android:name="com.openback.android.sdk.utils.helper.UserActivitiesIntentService"/>
-			
-			<receiver android:name="com.openback.android.sdk.utils.helper.OpenbackServiceAlarmReceiver" />
-			<receiver android:enabled="true" android:name="com.openback.android.sdk.utils.helper.OpenbackServiceBootReceiver" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
-				<intent-filter>
-					<action android:name="android.intent.action.BOOT_COMPLETED"/>
-					<category android:name="android.intent.category.DEFAULT"/>
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.ReceiveSmsEvent" >
-				<intent-filter>
-					<action android:name="android.intent.action.PHONE_STATE" />
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.ReceiveCallEvent" >
-				<intent-filter>
-					<action android:name="android.intent.action.PHONE_STATE" />
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.OutgoingCallEvent" >
-				<intent-filter>
-					<action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.UnlockScreenEvent">
-				<intent-filter>
-					<action android:name="android.intent.action.USER_PRESENT" />
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.OpenbackAppReceiver">
-				<intent-filter>
-					<action android:name="android.intent.action.PACKAGE_REPLACED" />
-					<action android:name="android.intent.action.PACKAGE_ADDED" />
-					<action android:name="android.intent.action.PACKAGE_REMOVED" />
-					<action android:name="android.intent.action.PACKAGE_CHANGED" />
-					<action android:name="android.intent.action.PACKAGE_INSTALL" />
-					<action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
-					<data android:scheme="package"/>
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.AirplaneModeReceiver">
-				<intent-filter>
-					<action android:name="android.intent.action.AIRPLANE_MODE"/>
-				</intent-filter>
-			</receiver>
-			<receiver android:name="com.openback.android.sdk.utils.helper.WifiReceiver">
-				<intent-filter>
-					<action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
-					<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-				</intent-filter>
-			</receiver>
+		    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.ambient_temperature" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.barometer" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.light" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.proximity" android:required="false" />
+		    <uses-feature android:name="android.hardware.sensor.relative_humidity" android:required="false" />
+		    <uses-feature android:name="android.hardware.wifi" android:required="false" />
+		    <uses-feature android:name="android.software.webview" android:required="false" />
+		</config-file>
+
+		<config-file parent="/manifest/application" target="AndroidManifest.xml">
+			<activity
+	            android:name="com.openback.OpenBackIdmActivity"
+	            android:excludeFromRecents="true"
+	            android:label="@string/app_name"
+	            android:screenOrientation="portrait"
+	            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+	            android:windowSoftInputMode="stateAlwaysHidden" />
+
+	        <service android:name="com.openback.OpenBackService" android:exported="false" />
+	        <service android:name="com.openback.OpenBackAssetService" android:exported="false" />
+
+	        <receiver android:name="com.openback.OpenBackReceiver" android:exported="true">
+	            <intent-filter>
+	                <!-- Boot Complete event (level 1) -->
+	                <action android:name="android.intent.action.BOOT_COMPLETED" />
+	                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
+	                <category android:name="android.intent.category.DEFAULT" />
+	            </intent-filter>
+	            <intent-filter>
+	                <!-- Package events (level 3) -->
+	                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+	                <action android:name="android.intent.action.PACKAGE_ADDED" />
+	                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+	                <action android:name="android.intent.action.PACKAGE_CHANGED" />
+	                <data android:scheme="package" />
+	            </intent-filter>
+	            <intent-filter>
+	                <!-- Package events (level 12) -->
+	                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+	            </intent-filter>
+	        </receiver>
 		</config-file>
  
 		<framework src="src/android/OpenBack.gradle" custom="true" type="gradleReference" />
