--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-openback" version="2.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-openback" version="2.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 	
 	<name>OpenBack</name>
 	<description>OpenBack Cordova Plugin</description>
@@ -10,7 +10,7 @@
 	</js-module>
 
 	<platform name="ios">
-		<framework src="OpenBack" type="podspec" spec="~> 1.8" />
+		<framework src="OpenBack" type="podspec" spec="~> 1.9.5" />
 
 		<config-file parent="/*" target="config.xml">
 			<feature name="OpenBack">
@@ -27,6 +27,7 @@
 
 		<config-file>
 			<access origin="*.openback.com" />
+			<access origin="*.core.windows.net" />
 		</config-file>
 
 		<source-file src="src/ios/OpenBackPlugin.m" />
